# tstriage

./: .gitignore  AGENTS.md  AUDIO_PROCESSING.md  CLAUDE.md  CLI_DESIGN.md  Jenkinsfile  README.md  install.cmd  pyproject.toml  setup.py  triage.config.json  triage.sample.json  tstriage.config.example.yml  tstriage.config.yml
docs/: AUDIO_PROCESSING.md  CLI_DESIGN.md  ass-font-compatibility.md  edl-kodi-behavior.md  fixaudio-detection-gap.md  modern-cli-design.md  nfo-metadata-for-kodi.md  subtitle-lessons-2026-04-30.md
tests/: test_EPG.py  test_common.py  test_input_file.py  test_triage.py  test_video_info.py
tstriage/: __init__.py  _progress.py  cli_config.py  common.py  encode.py  epg.py  epgstation.py  event.yml  input_file.py  nas.py  pipeline.py  runner.py  splitter.py  subprocess_utils.py  tasks.py  tee.py  trigger.py  video_info.py
